@@ -1,3 +1,9 @@
+8/27/2003   version 0.1.9   Ian Lewis  <IanLewis@member.fsf.org>
+
+    * Changed the DOMSerializer class to conform to the DOM3 standard
+      DOMWriter (old) interface. Used the java.io.OutputStreamWriter class for
+      encoding. Added an encoding option to the option dialog.
+
 8/27/2003   version 0.1.8   Ian Lewis  <IanLewis@member.fsf.org>
 
     * Fixed bug in DefaultXMLDocument that messed up which model the object was
